# video-spider

./: .clog.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: pr.yml  release.yml
config-lua/: Cargo.toml
config-lua/src/: lib.rs  run.rs  video.rs
luacore/: Cargo.toml
luacore/src/: error.rs  lib.rs  search.rs  series.rs  utils.rs
luacore/src/config_lua/: extension.rs  run.rs
luacore/tests/config_lua/: simple_main.lua
luacore/tests/config_lua/extension/: test_json_parse.lua  test_lua_extension.lua  test_unicode_decode.lua
src/: error.rs  lib.rs  luafiles.rs  main.rs  play.rs  search.rs  series.rs  utils.rs
src/config_lua/: extension.rs  mod.rs  output.rs  run.rs  series.rs
taurigui/: README.md  package.json  player.html  vite.config.ts
taurigui/src/: App.css  App.tsx
taurigui/src-tauri/: Cargo.toml  tauri.conf.json
taurigui/src-tauri/src/: lib.rs  main.rs
taurigui/src/components/: CloseIcon.tsx  CloseableButton.tsx  Home.tsx  NavSeriesPage.tsx  Search.tsx
taurigui/src/player/: Player.tsx  main.tsx
tests/config-lua/: simple-main.lua
tests/config_lua/: ffzy.lua  simple-main.lua  simple_main.lua
tests/config_lua/extension/: test_log.lua  test_string_split.lua  test_url_decode.lua  (+2 more)
videospidercli/: Cargo.toml
videospidercli/src/: main.rs
videospidergui/: Cargo.toml  README.md
videospidergui/src/: left_column.rs  main.rs  main_win.rs  message.rs  state.rs
videospidertui/: Cargo.toml  README.md
videospidertui/src/: app.rs  help_buttom.rs  help_info.rs  main.rs  message.rs  page.rs  series_tab.rs  state.rs  tab.rs  utils.rs
(+14 files in other folders)
