[package]
name = "luacore"
version = "0.0.4"
edition = "2024"
license = "MIT"

[dependencies]
url = { version = "2.5" }
config = { version = "0.15" }
dirs = { version = "6.0" }
mlua = { version = "0.11", features = ["vendored", "lua54", "serde", "send"] }
urlencoding = { version = "2.1" }
serde_json = { version = "1.0" }
reqwest = { version = "0.12", features = ["blocking"] }
